# doom-fire-interop

./: .gitignore  Cargo.toml  README.md  cargo-config.toml
DoomFireAndroid/: README.md  guide.md
DoomFireAndroid/app/: build.gradle
DoomFireAndroid/app/src/androidTest/java/com/otaviopace/doomfireandroid/: ExampleInstrumentedTest.kt
DoomFireAndroid/app/src/main/: AndroidManifest.xml
DoomFireAndroid/app/src/main/java/com/otaviopace/doomfireandroid/: DoomFire.kt  MainActivity.kt
DoomFireAndroid/app/src/main/res/layout/: activity_main.xml
DoomFireAndroid/app/src/main/res/values/: strings.xml
DoomFireAndroid/app/src/test/java/com/otaviopace/doomfireandroid/: ExampleUnitTest.kt
DoomFireAndroid/gradle/wrapper/: gradle-wrapper.properties
DoomFireIOS/: README.md
DoomFireIOS/DoomFireIOS/: AppDelegate.swift  DoomFire.swift  DoomFireColor.swift  GameScene.swift  GameViewController.swift
DoomFireIOS/DoomFireIOS.xcodeproj/: project.pbxproj
DoomFireIOS/DoomFireIOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
DoomFireIOS/DoomFireIOS.xcodeproj/project.xcworkspace/xcshareddata/: DoomFireIOS.xcscmblueprint
DoomFireIOS/DoomFireIOS.xcodeproj/xcuserdata/otaviopace.xcuserdatad/xcschemes/: DoomFireIOS.xcscheme  xcschememanagement.plist
DoomFireIOS/DoomFireIOS/Base.lproj/: Main.storyboard
DoomFireIOS/DoomFireIOSTests/: DoomFireIOSTests.swift
DoomFireWeb/: README.md  index.html  index.js  package-lock.json  package.json
src/: android.rs  doom.h  lib.rs  pixel_board.rs  random.rs  standard_ffi.rs  wasm.rs
