[package]
name = "doom"
version = "0.1.0"
authors = ["Otávio Pace <otaviopp8@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib", "staticlib", "dylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.16"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
cfg-if = "0.1.2"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.11.0", default-features = false }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rand = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
